Bug 566879 - Make innerHTML-inserted from controls not restore their state from history. r=Olli.Pettay.